--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "require": {
+    "bolden/google-maps-api": "1.0.3",
     "craftcms/ckeditor": "1.0.0-beta.2",
     "craftcms/cms": "^3.0.0",
     "craftcms/contact-form": "2.2.6",
