--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "craftcms/ckeditor": "1.0.0-beta.2",
     "craftcms/cms": "^3.0.0",
     "craftcms/contact-form": "2.2.6",
+    "doublesecretagency/craft-smartmap": "3.2.2.1",
     "ether/simplemap": "3.7.6",
     "fortrabbit/craft-copy": "^1.0.0-beta",
     "rynpsc/craft-phone-number": "1.2.5",
