--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "ether/simplemap": "3.7.6",
     "fortrabbit/craft-copy": "^1.0.0-beta",
     "rynpsc/craft-phone-number": "1.2.5",
+    "solspace/craft-freeform": "3.5.10",
     "vlucas/phpdotenv": "^3.4.0"
   },
   "autoload": {
