--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,13 @@
     "craftcms/ckeditor": "1.0.0-beta.2",
     "craftcms/cms": "3.3.20.1",
     "craftcms/contact-form": "2.2.6",
+    "craftcms/feed-me": "4.2.0.1",
+    "craftcms/redactor": "2.4.0",
     "doublesecretagency/craft-smartmap": "3.2.2.1",
     "froala/craft-froala-wysiwyg": "2.9.5",
     "rynpsc/craft-phone-number": "1.2.5",
     "solspace/craft-freeform": "3.5.10",
+    "verbb/redactor-tweaks": "2.0.2",
     "vlucas/phpdotenv": "^3.4.0"
   },
   "autoload": {
