--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "craftcms/redactor": "2.5.0",
     "doublesecretagency/craft-smartmap": "3.2.2.1",
     "froala/craft-froala-wysiwyg": "3.1.0",
+    "hashtagerrors/craft-pagination": "1.0.2",
     "rynpsc/craft-phone-number": "1.3.0",
     "solspace/craft-freeform": "3.6.1",
     "verbb/redactor-tweaks": "2.0.2",
