--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "require": {
     "craftcms/ckeditor": "1.0.0-beta.2",
-    "craftcms/cms": "3.4.1",
+    "craftcms/cms": "3.4.4.1",
     "craftcms/contact-form": "2.2.6",
     "craftcms/feed-me": "4.2.0.1",
     "craftcms/redactor": "2.5.0",
@@ -9,8 +9,9 @@
     "froala/craft-froala-wysiwyg": "3.1.0",
     "hashtagerrors/craft-pagination": "1.0.2",
     "nystudio107/craft-cookies": "1.1.11",
+    "putyourlightson/craft-sendgrid": "1.2.0",
     "rynpsc/craft-phone-number": "1.3.0",
-    "solspace/craft-freeform": "3.6.1",
+    "solspace/craft-freeform": "3.6.2",
     "verbb/redactor-tweaks": "2.0.2",
     "vlucas/phpdotenv": "^3.4.0"
   },
