--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "require": {
+    "carlcs/craft-redactorcustomstyles": "3.0.2",
     "craftcms/ckeditor": "1.0.0-beta.2",
-    "craftcms/cms": "3.4.4.1",
+    "craftcms/cms": "3.4.5",
     "craftcms/contact-form": "2.2.6",
     "craftcms/feed-me": "4.2.0.1",
     "craftcms/redactor": "2.5.0",
@@ -12,6 +13,7 @@
     "putyourlightson/craft-sendgrid": "1.2.0",
     "rynpsc/craft-phone-number": "1.3.0",
     "solspace/craft-freeform": "3.6.2",
+    "svenjungnickel/redactor-font-awesome": "2.1.1",
     "verbb/redactor-tweaks": "2.0.2",
     "vlucas/phpdotenv": "^3.4.0"
   },
