--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
     "craftcms/cms": "3.4.5",
     "craftcms/contact-form": "2.2.6",
     "craftcms/feed-me": "4.2.0.1",
-    "craftcms/redactor": "2.5.0",
+    "craftcms/redactor": "2.6.0",
     "doublesecretagency/craft-smartmap": "3.2.2.1",
+    "fortrabbit/craft-copy": "1.0.0-RC9",
     "froala/craft-froala-wysiwyg": "3.1.0",
     "hashtagerrors/craft-pagination": "1.0.2",
     "nystudio107/craft-cookies": "1.1.11",
