--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "craftcms/feed-me": "4.2.0.1",
     "craftcms/redactor": "2.6.0.1",
     "doublesecretagency/craft-smartmap": "3.2.2.1",
+    "enupal/stripe": "2.2.1",
     "fortrabbit/craft-copy": "1.0.0-RC9",
     "froala/craft-froala-wysiwyg": "3.1.0",
     "hashtagerrors/craft-pagination": "1.0.2",
