--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,12 @@
     "craftcms/feed-me": "4.2.0.1",
     "craftcms/redactor": "2.6.0.1",
     "doublesecretagency/craft-smartmap": "3.2.2.1",
-    "enupal/stripe": "2.2.1",
+    "enupal/stripe": "2.3.1",
     "fortrabbit/craft-copy": "1.0.0-RC10",
     "froala/craft-froala-wysiwyg": "3.1.0",
     "hashtagerrors/craft-pagination": "1.0.2",
     "nystudio107/craft-cookies": "1.1.12",
+    "pdaleramirez/super-filter": "1.0.4",
     "putyourlightson/craft-sendgrid": "1.2.0",
     "rynpsc/craft-phone-number": "1.3.0",
     "solspace/craft-freeform": "3.6.4",
